# swagger.yaml
@@ -164,6 +164,9 @@ paths:
                 published:
                   type: boolean
                   example: true
+                price:
+                  type: integer
+                  example: 55000
       responses:
         "201":
           description: Tutorial created successfully
@@ -246,7 +249,7 @@ paths:
             type: string
 
             pattern: ^\d{4}-\d{2}-\d{2}$
-            example: 2025-05-15
+            example: 2026-05-15
           description: Date to to retrieve (must be in YYYY-MM-DD format)
         - in: query
           name: priceFrom
@@ -427,7 +430,7 @@ paths:
             type: string
 
             pattern: ^\d{4}-\d{2}-\d{2}$
-            example: 2025-05-15
+            example: 2026-05-15
           description: Date to to retrieve (must be in YYYY-MM-DD format)
         - in: query
           name: priceFrom
@@ -546,6 +549,9 @@ paths:
                 published:
                   type: boolean
                   example: false
+                price:
+                  type: integer
+                  example: 55000
       responses:
         "200":
           description: Tutorial updated successfully
@@ -693,6 +699,9 @@ components:
         published:
           type: boolean
           example: true
+        price:
+          type: integer
+          example: 40000
         userid:
           type: integer
           example: 1
